--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body {
     padding: 0;
     background: #FFF;
     overflow-x: hidden;
+    /*
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    */
 }
 
 a,
