--- a/style.css
+++ b/style.css
@@ -284,7 +284,9 @@ a:hover {
     padding-right: 0;
     padding-left: 0;
 }
-
+.col-sm-12{
+    background-color: #364577;
+}
 #bloc-1-hero h1 {
     font-size: 32px;
 }
@@ -782,12 +784,14 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    /*color: #FFFFFF!important;*/
+    color:#000000;
+
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+
 }
 
 .ltc-white {
