--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     padding: 0;
     background: #FFF;
     overflow-x: hidden;
+    max-width:1350px;
+    margin: auto;
     /*
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -284,6 +286,7 @@ a:hover {
     padding-right: 0;
     padding-left: 0;
 }
+
 .col-sm-12{
     background-color: #364577;
 }
