--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1660,7 +1660,12 @@ mark {
 .text-center {
     text-align: center
 }
-
+.text-center-5{
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    background-color: #364577;
+}
 .text-justify {
     text-align: justify
 }
