--- Auto-Git Commit ---

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1393,7 +1393,7 @@ body {
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
-    background-color: #fff
+    background-color: #ffffff
 }
 
 button,
@@ -1406,7 +1406,7 @@ textarea {
 }
 
 a {
-    color: #337ab7;
+    /*color: #337ab7;*/
     text-decoration: none
 }
 
