--- a/style.css
+++ b/style.css
@@ -741,8 +741,10 @@ h4 {
     margin-top: 24px;
 }
 
-.white {
+.white-2 {
     color: #ffffff!important;
+    font-family:Verdana, Geneva, Tahoma, sans-serif!important;
+    font-weight: 400;
 }
 .black{
     color: #000000;
