--- a/style.css
+++ b/style.css
@@ -746,6 +746,10 @@ h4 {
     font-family:Verdana, Geneva, Tahoma, sans-serif!important;
     font-weight: 400;
 }
+
+.tc-pink{
+    color: #fdd4ba!important;
+}
 .black{
     color: #000000;
 }
