--- a/style.css
+++ b/style.css
@@ -270,6 +270,9 @@ a:hover {
 
 .voffset {
     margin-top: 30px;
+    font-weight: 100!important;
+    text-transform: lowercase!important;
+    
 }
 
 .voffset-lg {
@@ -716,9 +719,9 @@ h2 {
 }
 
 h3 {
-    font-size: 15px;
+    /*font-size: 15px;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 700;*/
     color: #333333!important;
 }
 
@@ -743,6 +746,7 @@ h4 {
 
 .white-2 {
     color: #ffffff!important;
+    font-size: 20px;
     font-family:Verdana, Geneva, Tahoma, sans-serif!important;
     font-weight: 400;
 }
