--- a/style.css
+++ b/style.css
@@ -536,7 +536,7 @@ button {
 .scrollToTop {
     width: 40px;
     height: 40px;
-    position: fixed;
+    position: local;
     bottom: 20px;
     right: 20px;
     opacity: 0;
