--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1599,7 +1599,7 @@ h1 {
 
 .h2,
 h2 {
-    font-size: 30px
+    font-size: 30px;
 }
 
 .h3,
@@ -1660,12 +1660,13 @@ mark {
 
 .text-center {
     text-align: center
+
 }
 .text-center-5{
     width: 70%;
     margin: auto;
     text-align: center;
-    background-color: #364577;
+    background-color: #364577
 }
 .text-justify {
     text-align: justify
