--- a/style.css
+++ b/style.css
@@ -458,10 +458,10 @@ nav .caret {
     float: right;
 }
 
-.mg-md {
+/*.mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
-}
+}*/
 
 .mg-lg {
     margin-top: 10px;
