--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2294,7 +2294,7 @@ pre code {
     .col-sm-1,
     .col-sm-10,
     .col-sm-11,
-    /*col-sm-12*/
+    .col-sm-12
     .col-sm-2,
     .col-sm-3,
     .col-sm-4,
@@ -2310,6 +2310,8 @@ pre code {
         margin: auto;
         text-align: center
     }
+
+  X
     .col-sm-11 {
         width: 91.66666667%
     }
