--- a/style.css
+++ b/style.css
@@ -299,6 +299,8 @@ a:hover {
 .col-sm-12{
     background-color: #364577;
 }
+
+
 #bloc-1-hero h1 {
     font-size: 32px;
 }
@@ -811,7 +813,11 @@ h4 {
     color: #F3976C!important;
 }
 .tc-white-5{
+    background-color:#364577;
     color: #ffffff;
+    width:45%;
+    padding: 0px 15px;
+    margin: auto;
 }
 
 .btn-atomic-tangerine {
