--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -60,9 +60,16 @@ a:hover {
 }
 
 .black-20>li>a{
-    color: black!important;
-    font-size: 20px!important;
+    color: black;
+    font-size: 30px
 }
+
+.black-25{
+    color: black;
+    font-size: 25px;
+    font-weight: 600
+}
+
 
 abbr[title] {
     border-bottom: 1px dotted
@@ -2017,10 +2024,10 @@ pre code {
     margin-left: auto
 }
 
-.row {
+/*.row {
     margin-right: -15px;
     margin-left: -15px
-}
+}*/
 
 .col-lg-1,
 .col-lg-10,
