--- a/style.css
+++ b/style.css
@@ -821,6 +821,11 @@ h4 {
     margin: auto;
 }
 
+.black-20>li>a{
+    color: black;
+    font-size: 20px;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #000000!important;
@@ -867,6 +872,8 @@ h4 {
 .bg-presentation {
     background-image: url("img/image-de-presentation.png");
 }
+
+
 
 @media (max-width: 1024px) {
     .bloc {
@@ -994,6 +1001,8 @@ h4 {
         left: -1px;
         right: -1px;
     }
+    
+
     .navbar-collapse {
         padding: 0;
         overflow-x: hidden;
