--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@ body {
     overflow-x: hidden;
     max-width:1350px;
     margin: auto;
-    /*
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    */
 }
 
 a,
@@ -17,7 +13,7 @@ button {
     outline: none!important;
 }
 
-a:hover {
+a:hover,a:focus {
     text-decoration: none;
     cursor: pointer;
 }
@@ -162,6 +158,7 @@ a:hover {
 .d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
 }
+
 
 .d-bloc .navbar-toggle .icon-bar {
     background: rgba(255, 255, 255, 1);
