--- a/style.css
+++ b/style.css
@@ -721,7 +721,15 @@ p {
     font-weight: 700;
 }
 
+.container-liens{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
 .social {
+    display: flex;
+    justify-content: space-around;
     max-width: 400px;
     margin: auto auto auto auto;
 }
