--- a/style.css
+++ b/style.css
@@ -536,11 +536,8 @@ button {
 .scrollToTop {
     width: 40px;
     height: 40px;
-    position: local;
-    bottom: 20px;
-    right: 20px;
-    opacity: 0;
-    z-index: 500;
+    position:absolute;
+    right: 0px;
     transition: all .3s ease-in-out;
 }
 
@@ -723,14 +720,14 @@ p {
 
 .container-liens{
     position: relative;
-    justify-content: center;
+    display: flex;
     align-items: center;
 }
 
 .social {
     display: flex;
     justify-content: space-around;
-    max-width: 400px;
+    min-width: 80%;
     margin: auto auto auto auto;
 }
 
