--- a/style.css
+++ b/style.css
@@ -872,12 +872,31 @@ h4 {
 .bg-presentation {
     background-image: url("img/image-de-presentation.png");
 }
+
+.bloc7{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.bloc7-1,.bloc7-2{
+    width: 100%;
+    margin: 0px 10px;
+}
+
+.btn7{
+    width: fit-content;
+}
+
+
 /*------------------ AFFICHAGE SUIVANT ECRAN ----------*/
 
 @media (max-width: 400px) {
     .bloc {
         padding-left: 0;
         padding-right: 0;
+    }
+    .bloc7-1,.bloc7-2{
+        width: 33%;
     }
 }
 
@@ -900,6 +919,10 @@ h4 {
 }
 
 @media (max-width: 767px) {
+
+    .bloc7-1,.bloc7-2{
+        width: 45%;
+    }
     .page-container {
         overflow-x: hidden;
         position: relative;
