--- Auto-Git Commit ---

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3203,7 +3203,9 @@ fieldset[disabled] .form-control {
 }
 
 textarea.form-control {
-    height: auto
+    height: auto;
+    margin-bottom: 15px
+    
 }
 
 input[type=search] {
