--- a/style.css
+++ b/style.css
@@ -534,6 +534,7 @@ button {
 }
 
 .scrollToTop {
+    display: none;
     width: 40px;
     height: 40px;
     position:absolute;
@@ -895,12 +896,7 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
-    .bloc7-1,.bloc7-2{
-        width: 33%;
-    }
 }
-
-
 
 
 @media (max-width: 992px) and (min-width: 768px) {
@@ -916,19 +912,24 @@ h4 {
     .b-parallax {
         background-attachment: fixed;
     }
+    .bloc7-1,.bloc7-2{
+        width: 45%;
+    }
+
 }
 
 @media (max-width: 767px) {
 
-    .bloc7-1,.bloc7-2{
-        width: 45%;
+    .scrollToTop{
+        display: initial;
     }
+
     .page-container {
         overflow-x: hidden;
         position: relative;
     }
     h1,
-    h2,
+    h2, 
     h3,
     h4,
     h5,
