--- a/style.css
+++ b/style.css
@@ -360,8 +360,8 @@ top: 0;
 .nav > li a:focus {
     background-color:transparent;
 }*/
-nav>a:hover{
-   filter: drop-shadow(8px 8px 10px #444343);
+nav>a:hover,nav>a:focus{
+   background-color: red;               
 }
 
 .navbar-toggle {
@@ -389,46 +389,6 @@ nav>a:hover{
     z-index: 2;
 }
 
-@media (min-width: 768px) {
-    .site-navigation {
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
-    }
-    .nav > li .dropdown-menu a,
-    .nav > li .dropdown-menu a:hover {
-        color: #484848;
-    }
-    .nav-invert .site-navigation {
-        left: 0;
-        right: 0;
-    }
-    .nav-center {
-        text-align: center;
-    }
-    .nav-center .navbar-header {
-        width: 100%;
-    }
-    .nav-center .navbar-header,
-    .nav-center .navbar-brand,
-    .nav-center .nav > li {
-        float: none;
-        display: inline-block;
-    }
-    .nav-center .site-navigation {
-        position: relative;
-        width: 100%;
-        right: 0;
-        margin-right: 0px;
-        margin-top: 20px;
-    }
-    .nav-center.mini-nav .navbar-toggle {
-        float: none;
-        margin: 10px auto 0;
-    }
-}
 
 .nav > li > .dropdown a {
     background: none!important;
@@ -893,16 +853,6 @@ h4 {
 }
 
 /*-----------------------------------------------------*/
-/*------ GESTION DES FOCUS ----------------------------*/
-/*-----------------------------------------------------*/
-@supports (div:focus-visible){
-
-
-    .btn-d:focus-visible {
-        outline: 6px dashed hotpink;
-    }
-}
-/*-----------------------------------------------------*/
 /* ---------SUIVANT ECRAN ----------*/
 /*-----------------------------------------------------*/
 
@@ -912,27 +862,6 @@ h4 {
         padding-right: 0;
     }
 }
-
-
-@media (max-width: 992px) and (min-width: 768px) {
-    .navbar .nav {
-        max-width: 80%
-    }
-    .nav-center.navbar .nav {
-        max-width: 100%
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1350px) and (orientation: landscape) {
-    .b-parallax {
-        background-attachment: fixed;
-    }
-    .bloc7-1,.bloc7-2{
-        width: 45%;
-    }
-
-}
-
 @media (max-width: 767px) {
 
     .scrollToTop{
@@ -1079,7 +1008,6 @@ h4 {
         height: 320px;
     }
 }
-
 @media (max-width: 991px) {
     .container {
         width: 100%;
@@ -1102,9 +1030,6 @@ h4 {
         padding: 0 20px;
     }
 }
-
-
-
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -1116,5 +1041,61 @@ h4 {
     .bloc-tile-4.full-width-bloc .container {
         padding-left: 0;
         padding-right: 0;
+    }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+    .navbar .nav {
+        max-width: 80%
+    }
+    .nav-center.navbar .nav {
+        max-width: 100%
+    }
+}
+@media (min-width: 768px) {
+
+    .b-parallax {
+        background-attachment: fixed;
+    }
+    .bloc7-1,.bloc7-2{
+        width: 45%;
+    }
+
+    .site-navigation {
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translate(0, -50%);
+        -webkit-transform: translateY(-50%);
+    }
+    .nav > li .dropdown-menu a,
+    .nav > li .dropdown-menu a:hover {
+        color: #484848;
+    }
+    .nav-invert .site-navigation {
+        left: 0;
+        right: 0;
+    }
+    .nav-center {
+        text-align: center;
+    }
+    .nav-center .navbar-header {
+        width: 100%;
+    }
+    .nav-center .navbar-header,
+    .nav-center .navbar-brand,
+    .nav-center .nav > li {
+        float: none;
+        display: inline-block;
+    }
+    .nav-center .site-navigation {
+        position: relative;
+        width: 100%;
+        right: 0;
+        margin-right: 0px;
+        margin-top: 20px;
+    }
+    .nav-center.mini-nav .navbar-toggle {
+        float: none;
+        margin: 10px auto 0;
     }
 }
