--- a/style.css
+++ b/style.css
@@ -849,7 +849,17 @@ h4 {
 }
 
 /*-----------------------------------------------------*/
-/* ---------SUIVANT ECRAN ----------*/
+/* ---------GESTION DES FOCUS ET SURVOL SOURIS ----------*/
+/*-----------------------------------------------------*/
+.navbar-brand:hover,
+.navbar-brand:focus
+nav>ul>li>a:hover,
+nav>ul>li>a:focus{
+    border:solid #364577;
+    transform: scale(1.1);
+}
+/*-----------------------------------------------------*/
+/* --------- AFFICHAGE SUIVANT ECRAN ----------*/
 /*-----------------------------------------------------*/
 
 @media (max-width: 400px) {
