--- Auto-Git Commit ---

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -49,7 +49,7 @@ audio:not([controls]) {
 template {
     display: none
 }
-
+/*
 a {
     background-color: transparent
 }
@@ -58,7 +58,7 @@ a:active,
 a:hover {
     outline: 0
 }
-
+*/
 
 .black-25{
     color: black;
