--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     margin: auto;
 }
 
-a,
 button {
     transition: all .3s ease-in-out;
     outline: none!important;
@@ -20,7 +19,7 @@ a:hover {
 
 #page-loading-blocs-notifaction {
     position: fixed;
-top: 0;                 
+    top: 0;                 
     bottom: 0;
     width: 100%;
     z-index: 100000;
@@ -801,9 +800,9 @@ h4 {
     color: #FFFFFF!important;
 }
 
-.ltc-white:hover {
+/*.ltc-white:hover {
     color: #cccccc!important;
-}
+}*/
 
 .ltc-atomic-tangerine {
     color: #F3976C!important;
@@ -858,6 +857,13 @@ nav>ul>li>a:focus{
     border:solid #364577;
     transform: scale(1.1);
 }
+
+li>a:hover{
+
+    border:solid #364577;
+    transform: scale(1.1);
+}
+
 /*-----------------------------------------------------*/
 /* --------- AFFICHAGE SUIVANT ECRAN ----------*/
 /*-----------------------------------------------------*/
