--- a/style.css
+++ b/style.css
@@ -800,9 +800,9 @@ h4 {
     color: #FFFFFF!important;
 }
 
-/*.ltc-white:hover {
+.ltc-white:hover {
     color: #cccccc!important;
-}*/
+}
 
 .ltc-atomic-tangerine {
     color: #F3976C!important;
