--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1446,7 +1446,7 @@ img {
 .thumbnail a>img,
 .thumbnail>img {
     display: block;
-    max-width: 100%;
+max-width: 100%;        
     height: auto
 }
 
@@ -2345,7 +2345,7 @@ pre code {
     }
     .col-sm-4 {
         width: 33.33333333%
-    }
+}
     .col-sm-3 {
         width: 25%
     }
@@ -5230,16 +5230,13 @@ textarea.input-group-sm>.input-group-btn>.btn {
     border-radius: 4px
 }
 
-.navbar-toggle:focus {
-    outline: 0
-}
 
 .navbar-toggle .icon-bar {
     display: block;
     width: 22px;
     height: 2px;
     border-radius: 1px
-}
+}       
 
 .navbar-toggle .icon-bar+.icon-bar {
     margin-top: 4px
@@ -5476,12 +5473,12 @@ textarea.input-group-sm>.input-group-btn>.btn {
     background-color: transparent
 }
 
-.navbar-default .navbar-toggle {
+.navbar-default {
     border-color: #ddd
 }
 
-.navbar-default .navbar-toggle:focus,
-.navbar-default .navbar-toggle:hover {
+.navbar-default ,
+.navbar-default {
     background-color: #ddd;
     background-color: red;
     
@@ -5596,16 +5593,16 @@ fieldset[disabled] .navbar-default .btn-link:hover {
     background-color: transparent
 }
 
-.navbar-inverse .navbar-toggle {
+.navbar-inverse {
     border-color: #333
 }
 
-.navbar-inverse .navbar-toggle:focus,
-.navbar-inverse .navbar-toggle:hover {
+.navbar-inverse ,
+.navbar-inverse {
     background-color: #333
 }
 
-.navbar-inverse .navbar-toggle .icon-bar {
+.navbar-inverse .icon-bar {
     background-color: #fff
 }
 
