--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -49,16 +49,6 @@ audio:not([controls]) {
 template {
     display: none
 }
-/*
-a {
-    background-color: transparent
-}
-
-a:active,
-a:hover {
-    outline: 0
-}
-*/
 
 .black-25{
     color: black;
@@ -4303,8 +4293,7 @@ tbody.collapse.in {
     margin-left: 2px;
     vertical-align: middle;
     border-top: 4px dashed;
-    border-top: 4px solid\9;
-    border-right: 4px solid transparent;
+    /*border-top: 4px solid\9;*/
     border-left: 4px solid transparent
 }
 
@@ -4390,7 +4379,7 @@ tbody.collapse.in {
     cursor: not-allowed;
     background-color: transparent;
     background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
+    /*filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)*/
 }
 
 .open>.dropdown-menu {
@@ -5136,7 +5125,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     max-height: 340px
 }
 
-@media (max-device-width:480px) and (orientation:landscape) {
+@media (max-width:480px) and (orientation:landscape) {
     .navbar-fixed-bottom .navbar-collapse,
     .navbar-fixed-top .navbar-collapse {
         max-height: 200px
