--- a/style.css
+++ b/style.css
@@ -84,17 +84,16 @@ a:hover {
 .bg-t-edge {
     background: top no-repeat;
 }
-
+/*
 .bloc-bg-texture::before {
     content: "";
     background-size: 2px 2px;
-    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
 }
-
+*/
 .texture-paper::before {
     /*background: url("img/texture-paper.png");*/
     background-size: 280px 280px;
@@ -921,6 +920,7 @@ nav>ul>li>a:focus{
     .nav > li:hover {
         background: rgba(0, 0, 0, .08);
     }
+
     .dropdown .dropdown a .caret {
         float: none;
         margin: 5px 0 0 10px!important;
