--- a/style.css
+++ b/style.css
@@ -782,6 +782,12 @@ h4 {
     font-size: 20px;
 }
 
+.black-20-g{
+    color: black!important;
+    font-weight: 800;
+    font-size: 20px;
+}
+
 
 
 .btn-atomic-tangerine {
