--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -2,14 +2,14 @@
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
-
+/*
 @font-face {
     font-family: 'FontAwesome';
     src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
     src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
     font-weight: normal;
     font-style: normal
-}
+}/*
 
 .fa {
     display: inline-block;
@@ -1575,9 +1575,9 @@
     content: "\f16c"
 }
 
-/*.fa-instagram:before {
+.fa-instagram:before {
     content: "\f16d"
-}*/
+}
 
 .fa-flickr:before {
     content: "\f16e"
