--- a/style.css
+++ b/style.css
@@ -318,7 +318,8 @@ a:hover {
 }
 
 .navbar-brand {
-    height: auto;
+    height: 40px;
+    width: 210px;
     padding: 3px 15px;
     font-size: 25px;
     font-weight: normal;
