--- a/style.css
+++ b/style.css
@@ -750,8 +750,8 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
-    width: 270px;
-    height: 270px;
+    width: 100%;
+    height: 100%;
 }
 
 .portfolio-row {
