--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a:hover {
     bottom: 0;
     width: 100%;
     z-index: 100000;
-    background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
+    background: #FFFFFF url("./img/pageload-spinner.gif") no-repeat center center;
 }
 
 .bloc {
@@ -41,7 +41,7 @@ a:hover {
 }
 
 #bloc-3-what-i-do{
-    background-image: url("img/la-chouette-agence-banniere.avif");
+    background-image: url("./img/la-chouette-agence-banniere.avif");
     background-attachment:local;
     height: 100%;
     width: 100%;
@@ -78,18 +78,8 @@ a:hover {
 .bg-t-edge {
     background: top no-repeat;
 }
-/*
-.bloc-bg-texture::before {
-    content: "";
-    background-size: 2px 2px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-*/
+
 .texture-paper::before {
-    /*background: url("img/texture-paper.png");*/
     background-size: 280px 280px;
 }
 
@@ -300,7 +290,7 @@ a:hover {
 }
 
 #bloc-1-hero{
-    background-image: url("img/image-de-presentation-2.avif");
+    background-image: url("./img/image-de-presentation-2.avif");
     background-attachment:local;
     height: 100%;
     width: 100%;
@@ -823,15 +813,15 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("./img/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
+    background-image: url("./img/lines-h2-bg.png");
 }
 
 .bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere.avif");
+    background-image: url("./img/la-chouette-agence-banniere.avif");
 }
 
 .bloc7{
